# horse-shoe

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  azure-pipelines.yml
_build/: azure-pipelines-template.yml  cargo-make.ps1  release.toml
src/: functions.rs  horseshoe.rs  lib.rs  numder.rs  numint.rs
