[package]
name = "horse-shoe"
description = "A Rust Language Infinitesimal Calculus crate"
homepage = "https://github.com/YakoYakoYokuYoku/Horse-Shoe"
keywords = ["mathematics", "numerics", "calculus"]
categories = ["algorithms", "science", "calculus"]
license = "MIT"
repository = "https://github.com/YakoYakoYokuYoku/Horse-Shoe"
version = "0.0.1"
readme = "README.md"
authors = ["YakoYakoYokuYoku"]
autobins = false

[dependencies]
num-traits = { git = "https://github.com/YakoYakoYokuYoku/num-traits" }
num-complex = { git = "https://github.com/YakoYakoYokuYoku/num-complex" }

[lib]
name = "horseshoe"
path = "src/horseshoe.rs"